comments and search fixes

--- a/src/Dropdown/styles.css
+++ b/src/Dropdown/styles.css
@@ -1,3 +1,5 @@
+
+/* Base default class */
 .wrapper-dropdown {
   position: relative;
   width: 200px;
@@ -10,9 +12,19 @@
   border: 1px solid silver;
   cursor: pointer;
   outline: none;
-  transition: all 0.3s ease-out;
+}
+.wrapper-dropdown input {
+  border-radius: 5px;
+  border: 0px;
+  height: 100%;
+  font-size: 1vw;
 }
 
+.wrapper-dropdown input:focus {
+  outline-width: 0;
+}
+
+/* Base class for list items */
 .wrapper-dropdown .wrapper-list{
   position: absolute;
   top: 100%;
@@ -26,25 +38,8 @@
   border: 1px solid silver;
   border-top: none;
   list-style: none;
-  transition: all 0.3s ease-out;
-  height: 300px;
+  max-height: 300px;
   overflow-y: auto;
-}
-
-
-.wrapper-dropdown .wrapper-list li {
-  display: block;
-  text-decoration: none;
-  transition: all 0.3s ease-out;
-  border-bottom: 1px solid #e6e8ea;
-  min-height: 20px;
-}
-
-.wrapper-dropdown .wrapper-list div li label {
-  display: inline-block;
-  padding: 10px 10px 10px 30px; /* Same padding as the button */
-  transition: all 0.3s ease-out;
-  cursor: pointer;
 }
 
 .wrapper-dropdown .wrapper-list .active {
@@ -54,4 +49,56 @@
 .wrapper-dropdown .wrapper-list div li:hover {
   background: #f0f0f0;
   cursor: pointer;
+}
+
+.wrapper-dropdown .wrapper-list div li label {
+  display: inline-block;
+  /* Same padding as button */
+  padding: 10px 10px 10px 30px;
+  cursor: pointer;
+}
+
+/* Base class for options */
+.wrapper-dropdown .options{
+  position: absolute;
+  top: 100%;
+  margin-top: 1px;
+  padding-left: 0px;
+  left: -1px;
+  right: -1px;
+
+  background: #fff;
+  border-radius: 0 0 5px 5px;
+  border: 1px solid silver;
+  border-top: none;
+  list-style: none;
+  overflow-y: auto;
+}
+
+.wrapper-dropdown .options .active {
+  background: #F0FFFF;
+}
+
+.wrapper-dropdown .options li:hover {
+  background: #f0f0f0;
+  cursor: pointer;
+}
+
+
+.wrapper-dropdown .options li {
+  display: block;
+  text-decoration: none;
+  border-bottom: 1px solid #e6e8ea;
+  min-height: 20px;
+}
+
+.wrapper-dropdown .options li label {
+  display: inline-block;
+  /* Same padding as button */
+  padding: 10px 10px 10px 30px; 
+  cursor: pointer;
+}
+
+.icon-right {
+  float: right;
 }
