--- a/src/Dropdown/styles.css
+++ b/src/Dropdown/styles.css
@@ -17,7 +17,7 @@
   border-radius: 5px;
   border: 0px;
   height: 100%;
-  font-size: 1vw;
+  font-size: 16px;
 }
 
 .wrapper-dropdown input:focus {
